--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -3,7 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
-       <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -389,6 +389,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="duU-ff-IEK">
                                 <rect key="frame" x="0.0" y="201" width="600" height="348"/>
+                                <animations/>
                                 <color key="backgroundColor" red="1" green="0.57999450409999997" blue="0.71067852350000005" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="by1-WB-oJK">
@@ -1002,7 +1003,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xQP-Gl-Wso" userLabel="BarGraphView">
-                                        <rect key="frame" x="5" y="183" width="590" height="200"/>
+                                        <rect key="frame" x="5" y="153" width="590" height="200"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blackLine" translatesAutoresizingMaskIntoConstraints="NO" id="sPY-5i-kbz">
                                                 <rect key="frame" x="0.0" y="173" width="590" height="2"/>
@@ -1022,7 +1023,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TimeFrame" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVa-Oc-9Io" userLabel="TimeFrameLbl">
-                                        <rect key="frame" x="175" y="373" width="250" height="20"/>
+                                        <rect key="frame" x="175" y="343" width="250" height="20"/>
                                         <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="GVX-J9-9Xl"/>
@@ -1032,23 +1033,41 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DaB-t4-Mv3">
+                                        <rect key="frame" x="175" y="373" width="250" height="30"/>
+                                        <animations/>
+                                        <color key="backgroundColor" red="0.071935559894374376" green="0.090819176365293311" blue="0.61133835078534027" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="oBH-Nx-UsH"/>
+                                        </constraints>
+                                        <state key="normal" title="Dismiss">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="customViewDismissGraphBtnClicked:" destination="mNN-B9-EVQ" eventType="touchUpInside" id="FCH-lq-5rZ"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="DaB-t4-Mv3" firstAttribute="height" secondItem="RVa-Oc-9Io" secondAttribute="height" id="0Fk-AQ-LyS"/>
                                     <constraint firstAttribute="trailing" secondItem="3U9-Dc-VNK" secondAttribute="trailing" constant="5" id="2Mn-KL-hJH"/>
                                     <constraint firstItem="MC0-Vx-sr7" firstAttribute="top" secondItem="3U9-Dc-VNK" secondAttribute="bottom" constant="10" id="2up-zL-20b"/>
                                     <constraint firstItem="xQP-Gl-Wso" firstAttribute="bottom" secondItem="RVa-Oc-9Io" secondAttribute="top" constant="10" id="7Xq-ff-Xob"/>
                                     <constraint firstItem="3U9-Dc-VNK" firstAttribute="leading" secondItem="zEB-Jp-LxP" secondAttribute="leading" constant="5" id="GX2-2Q-7sd"/>
+                                    <constraint firstItem="DaB-t4-Mv3" firstAttribute="centerX" secondItem="zEB-Jp-LxP" secondAttribute="centerX" id="HVi-MK-Cyd"/>
                                     <constraint firstItem="MC0-Vx-sr7" firstAttribute="leading" secondItem="3U9-Dc-VNK" secondAttribute="leading" id="M5R-If-M6K"/>
-                                    <constraint firstItem="xQP-Gl-Wso" firstAttribute="top" secondItem="MC0-Vx-sr7" secondAttribute="bottom" constant="50" id="Nnb-Bm-Sb3"/>
+                                    <constraint firstItem="xQP-Gl-Wso" firstAttribute="top" secondItem="MC0-Vx-sr7" secondAttribute="bottom" constant="20" id="Nnb-Bm-Sb3"/>
                                     <constraint firstAttribute="trailing" secondItem="3U9-Dc-VNK" secondAttribute="trailing" constant="5" id="TP3-3X-3kf"/>
                                     <constraint firstItem="MC0-Vx-sr7" firstAttribute="top" secondItem="xQP-Gl-Wso" secondAttribute="bottom" constant="10" id="X52-EF-RAG"/>
                                     <constraint firstItem="MC0-Vx-sr7" firstAttribute="top" secondItem="xQP-Gl-Wso" secondAttribute="bottom" constant="10" id="Z5u-zv-E1v"/>
                                     <constraint firstItem="MC0-Vx-sr7" firstAttribute="trailing" secondItem="3U9-Dc-VNK" secondAttribute="trailing" id="evg-nh-z7B"/>
                                     <constraint firstAttribute="trailing" secondItem="3U9-Dc-VNK" secondAttribute="trailing" constant="5" id="iSA-nB-3qk"/>
                                     <constraint firstItem="3U9-Dc-VNK" firstAttribute="top" secondItem="zEB-Jp-LxP" secondAttribute="top" constant="5" id="jJa-gZ-hdd"/>
+                                    <constraint firstItem="DaB-t4-Mv3" firstAttribute="top" secondItem="RVa-Oc-9Io" secondAttribute="bottom" constant="10" id="lGB-mo-3b7"/>
                                     <constraint firstItem="xQP-Gl-Wso" firstAttribute="trailing" secondItem="MC0-Vx-sr7" secondAttribute="trailing" id="mLh-Op-jQo"/>
+                                    <constraint firstItem="DaB-t4-Mv3" firstAttribute="width" secondItem="RVa-Oc-9Io" secondAttribute="width" id="nP9-LM-tTG"/>
                                     <constraint firstItem="RVa-Oc-9Io" firstAttribute="centerX" secondItem="zEB-Jp-LxP" secondAttribute="centerX" id="nPj-K4-Ykm"/>
                                     <constraint firstItem="xQP-Gl-Wso" firstAttribute="leading" secondItem="MC0-Vx-sr7" secondAttribute="leading" id="nzW-qr-jfK"/>
                                 </constraints>
@@ -1058,6 +1077,7 @@
                                         <exclude reference="iSA-nB-3qk"/>
                                         <exclude reference="X52-EF-RAG"/>
                                         <exclude reference="Z5u-zv-E1v"/>
+                                        <exclude reference="0Fk-AQ-LyS"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -1087,6 +1107,7 @@
                         <outlet property="blackLineImageView" destination="sPY-5i-kbz" id="9O4-a5-8fK"/>
                         <outlet property="customDateView" destination="rW9-9j-gEl" id="6KV-wX-Fbc"/>
                         <outlet property="customViewBinIdBtn" destination="lZ6-SX-kND" id="12b-RS-5oi"/>
+                        <outlet property="customViewGraphDismissBtn" destination="DaB-t4-Mv3" id="d3W-vg-wuu"/>
                         <outlet property="dateComponentsContainerView" destination="vVi-v2-D2D" id="N7I-iQ-eKK"/>
                         <outlet property="fromDateBtn" destination="Ooq-ll-uPD" id="NU6-nC-NFM"/>
                         <outlet property="nextFillDate" destination="kWw-ae-JaB" id="dFS-as-WBK"/>
